<resources>
    <string name="app_name">CoxAndKingsDemo</string>


    <string name="flight_status">Flight Status</string>

    <string name="itinerary">Itinerary</string>
    <string name="hotel_booking_status">Hotel Booking Status</string>
    <string name="flight_booking">Flight Booking</string>


    <string name="emergency_contact">EmergencyContact</string>

    <string name="settings">Settings</string>

    <string name="history">History</string>

    <string name="profile">Profile</string>


    <string name="trip_trip_to">Trip To:\u0020</string>
    <string name="company_name">CompanyName</string>


    <string name="itinerary_provider">Jet Airways</string>
    <string name="itinerary_flight_number">Flight: </string>
    <string name="itinerary_date">Date</string>
    <string name="itinerary_contact_person">Contact Person</string>

    <string name="itinerary_view_details">View Details</string>


    <string name="trip_trip_information">Trip Information</string>


    <string name="login_register_login">Login</string>
    <string name="login_register_register">Register</string>




    <string name="itinerary_detail">Flight Information</string>

</resources>
