<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextStyle"
            android:text="@string/app_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_100dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_20dp">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="@dimen/login_register_button_width"
                android:layout_height="wrap_content"
                android:text="@string/login_register_login"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="@dimen/login_register_button_width"
                android:layout_height="wrap_content"
                android:text="@string/login_register_register"                android:layout_marginTop="@dimen/padding_16dp"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>

</layout>