<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.ashish14060.coxandkingsdemo.binding_model.MainActivityVM">
        </variable>

        <import type="android.view.View"/>
    </data>

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ashish14060.coxandkingsdemo.activity.MainActivity1">

    <include layout="@layout/bottom_button_layout"/>

    <TextView
        android:id="@+id/tvCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/imgViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:src="@mipmap/app_icon" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutFlightStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8sp"
                android:visibility="@{viewModel.flightStatus ? View.VISIBLE :View.GONE}">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flight_status"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/flight_status_icon" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutUserItinary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/backgroundColor"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8sp"
                android:visibility="@{viewModel.itinerary ? View.VISIBLE :View.GONE}">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/itinerary"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/itineary" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutHotelBookingStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/backgroundColor"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8sp"
                android:visibility="@{viewModel.hotelBookingStatus ? View.VISIBLE :View.GONE}">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/hotel_booking_status"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/hotel_booking" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutFlightBooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/backgroundColor"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8sp"
                android:visibility="@{viewModel.flightBookingStatus ? View.VISIBLE :View.GONE}">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/flight_booking"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/flight_booking" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutEmergencyContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/backgroundColor"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8sp"
                android:visibility="@{viewModel.emergencyContact ? View.VISIBLE :View.GONE}">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/emergency_contact"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imgViewCamera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/emerygency_contact" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
</layout>